# claude-conductor

./: .gitignore  .mcp.json  CLAUDE.md  Package.swift  README.md
.claude/: settings.local.json
Claude Conductor.app/Contents/: Info.plist
Claude Conductor.app/Contents/MacOS/: ClaudeConductor
Claude Conductor.app/Contents/Resources/: AppIcon.icns
Sources/ClaudeConductor/App/: ClaudeConductorApp.swift
Sources/ClaudeConductor/Models/: Session.swift  SessionStore.swift
Sources/ClaudeConductor/Services/: TerminalProcess.swift
Sources/ClaudeConductor/Views/: ContentView.swift  DispatchSheet.swift  NewSessionSheet.swift  SessionGridView.swift  SettingsView.swift
electron-app/: CLAUDE.md  index.html  main.js  package-lock.json  package.json  renderer.js
electron-app/.claude/: settings.local.json
electron-app/test/: completion-detection.test.js  output-api.test.js  send-enter.test.js
mcp-server/: conductor_server.py  pyproject.toml
mcp-server/claude_conductor_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
