[project]
name = "claude-conductor-mcp"
version = "0.1.0"
description = "MCP Server for Claude Conductor - orchestrate multiple Claude sessions"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.4.1",
  "fastmcp>=0.2.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["conductor_server"]
